<resources>
    <string name="app_name">Spy</string>
    <string name="button_english">English</string>
    <string name="button_armenian">Armenian</string>
    <string name="button_russian">Russian</string>
    <string name="next">Next</string>
    <string name="categories">Categories</string>
    <string-array name="locations">
        <item>Bank</item>
        <item>School</item>
        <item>University</item>
        <item>Cinema</item>
        <item>Hospital</item>
        <item>Police Station</item>
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Supermarket</item>
        <item>Park</item>
        <item>Library</item>
        <item>Zoo</item>
        <item>Museum</item>
        <item>Castle</item>
        <item>Haunted Mansion</item>
        <item>Enchanted Forest</item>
        <item>Toilet</item>
        <item>Jungle</item>
        <item>Desert</item>
        <item>Island</item>
        <item>Hotel</item>
        <item>Prison</item>
        <item>Courtroom</item>
        <item>Jail</item>
        <item>Basement</item>
        <item>Attic</item>
        <item>Elevator</item>
        <item>Dungeon</item>
        <item>Throne Room</item>
        <item>Nightclub</item>
        <item>Bar</item>
        <item>Casino</item>
        <item>Gym</item>
        <item>Water Park</item>
        <item>Bowling Alley</item>
        <item>Bookstore</item>
        <item>New York City</item>
        <item>Tokyo</item>
        <item>Paris</item>
        <item>London</item>
        <item>Rome</item>
        <item>Dubai</item>
        <item>Egypt</item>
        <item>Antarctica</item>
        <item>Mount Everest</item>
        <item>Venice</item>
        <item>Sahara</item>
        <item>Hogwarts</item>
        <item>Space Station</item>
        <item>Amusement Park</item>
        <item>Beach</item>
        <item>Subway Station</item>
        <item>Airplane</item>
        <item>Train Station</item>
        <item>Bus Stop</item>
        <item>Cruise Ship</item>
        <item>Volcano</item>
        <item>Underwater City</item>
        <item>Lighthouse</item>
        <item>Cave</item>
        <item>Bridge</item>
        <item>Observatory</item>
        <item>Aquarium</item>
        <item>Ice Palace</item>
        <item>Stadium</item>
        <item>Marketplace</item>
        <item>Farm</item>
        <item>Factory</item>
        <item>Laboratory</item>
        <item>Temple</item>
        <item>Cemetery</item>
        <item>Swamp</item>
    </string-array>
    <string-array name="jobs">
        <item>Doctor</item>
        <item>Teacher</item>
        <item>Engineer</item>
        <item>Police Officer</item>
        <item>Firefighter</item>
        <item>Chef</item>
        <item>Waiter</item>
        <item>Mechanic</item>
        <item>Plumber</item>
        <item>Electrician</item>
        <item>Farmer</item>
        <item>Pilot</item>
        <item>Flight Attendant</item>
        <item>Actor</item>
        <item>Singer</item>
        <item>Dancer</item>
        <item>Writer</item>
        <item>Journalist</item>
        <item>Photographer</item>
        <item>Lawyer</item>
        <item>Judge</item>
        <item>Nurse</item>
        <item>Dentist</item>
        <item>Architect</item>
        <item>Scientist</item>
        <item>Programmer</item>
        <item>Web Developer</item>
        <item>Game Designer</item>
        <item>Graphic Designer</item>
        <item>Artist</item>
        <item>Musician</item>
        <item>Psychologist</item>
        <item>Therapist</item>
        <item>Librarian</item>
        <item>Cashier</item>
        <item>Receptionist</item>
        <item>Construction Worker</item>
        <item>Taxi Driver</item>
        <item>Bus Driver</item>
        <item>Soldier</item>
        <item>Sailor</item>
        <item>Fashion Designer</item>
        <item>Model</item>
        <item>Real Estate Agent</item>
        <item>Banker</item>
        <item>Accountant</item>
        <item>Translator</item>
        <item>Fitness Trainer</item>
        <item>Magician</item>
        <item>YouTuber</item>
        <item>Astronaut</item>
        <item>IT Specialist</item>
        <item>Security Guard</item>
        <item>Editor</item>
        <item>Director</item>
        <item>Producer</item>
        <item>Voice Actor</item>
        <item>Animator</item>
        <item>Barber</item>
        <item>Hairdresser</item>
        <item>Makeup Artist</item>
        <item>Social Media Manager</item>
        <item>Delivery Driver</item>
        <item>Cleaner</item>
        <item>Nanny</item>
        <item>Veterinarian</item>
        <item>Biologist</item>
        <item>Chemist</item>
        <item>Historian</item>
        <item>Tour Guide</item>
        <item>Event Planner</item>
        <item>Archaeologist</item>
    </string-array>
    <string-array name="animals">
        <item>Dog</item>
        <item>Cat</item>
        <item>Horse</item>
        <item>Cow</item>
        <item>Pig</item>
        <item>Sheep</item>
        <item>Goat</item>
        <item>Chicken</item>
        <item>Duck</item>
        <item>Goose</item>
        <item>Turkey</item>
        <item>Rabbit</item>
        <item>Hamster</item>
        <item>Guinea Pig</item>
        <item>Mouse</item>
        <item>Rat</item>
        <item>Deer</item>
        <item>Fox</item>
        <item>Wolf</item>
        <item>Bear</item>
        <item>Lion</item>
        <item>Tiger</item>
        <item>Leopard</item>
        <item>Cheetah</item>
        <item>Elephant</item>
        <item>Giraffe</item>
        <item>Zebra</item>
        <item>Hippopotamus</item>
        <item>Rhinoceros</item>
        <item>Kangaroo</item>
        <item>Koala</item>
        <item>Panda</item>
        <item>Monkey</item>
        <item>Gorilla</item>
        <item>Chimpanzee</item>
        <item>Bat</item>
        <item>Hedgehog</item>
        <item>Squirrel</item>
        <item>Raccoon</item>
        <item>Skunk</item>
        <item>Mole</item>
        <item>Otter</item>
        <item>Dolphin</item>
        <item>Whale</item>
        <item>Shark</item>
        <item>Octopus</item>
        <item>Squid</item>
        <item>Crab</item>
        <item>Lobster</item>
        <item>Seal</item>
        <item>Penguin</item>
        <item>Eagle</item>
        <item>Hawk</item>
        <item>Owl</item>
        <item>Parrot</item>
        <item>Crow</item>
        <item>Swan</item>
        <item>Flamingo</item>
        <item>Peacock</item>
        <item>Pigeon</item>
        <item>Seagull</item>
        <item>Lizard</item>
        <item>Snake</item>
        <item>Frog</item>
        <item>Toad</item>
        <item>Crocodile</item>
        <item>Turtle</item>
        <item>Tortoise</item>
        <item>Ant</item>
        <item>Bee</item>
        <item>Butterfly</item>
        <item>Spider</item>
    </string-array>
    <string name="food">Food</string>
    <string-array name="movies">
        <item>Titanic</item>
        <item>Avatar</item>
        <item>Inception</item>
        <item>The Godfather</item>
        <item>The Dark Knight</item>
        <item>Interstellar</item>
        <item>Gladiator</item>
        <item>Avengers: Endgame</item>
        <item>Avengers: Infinity War</item>
        <item>Iron Man</item>
        <item>Spider-Man: No Way Home</item>
        <item>Spider-Man: Homecoming</item>
        <item>Doctor Strange</item>
        <item>Captain America: Civil War</item>
        <item>Black Panther</item>
        <item>Thor: Ragnarok</item>
        <item>The Lion King</item>
        <item>Toy Story</item>
        <item>Finding Nemo</item>
        <item>Up</item>
        <item>Frozen</item>
        <item>Moana</item>
        <item>Coco</item>
        <item>Encanto</item>
        <item>The Incredibles</item>
        <item>Shrek</item>
        <item>Despicable Me</item>
        <item>Minions</item>
        <item>Kung Fu Panda</item>
        <item>Madagascar</item>
        <item>How to Train Your Dragon</item>
        <item>Harry Potter and the Sorcerer’s Stone</item>
        <item>Harry Potter and the Deathly Hallows</item>
        <item>Fantastic Beasts</item>
        <item>Star Wars: A New Hope</item>
        <item>Star Wars: The Force Awakens</item>
        <item>The Hunger Games</item>
        <item>Twilight</item>
        <item>The Maze Runner</item>
        <item>Divergent</item>
        <item>The Chronicles of Narnia</item>
        <item>Pirates of the Caribbean</item>
        <item>The Lord of the Rings: The Fellowship of the Ring</item>
        <item>The Hobbit</item>
        <item>The Matrix</item>
        <item>John Wick</item>
        <item>Fast and Furious</item>
        <item>Jurassic Park</item>
        <item>Jurassic World</item>
        <item>The Conjuring</item>
        <item>It</item>
        <item>Annabelle</item>
        <item>Scream</item>
        <item>A Quiet Place</item>
        <item>Get Out</item>
        <item>The Nun</item>
        <item>Barbie</item>
        <item>Oppenheimer</item>
        <item>Dune</item>
        <item>Wonka</item>
        <item>The Meg</item>
        <item>Godzilla vs. Kong</item>
        <item>Puss in Boots: The Last Wish</item>
        <item>Sing</item>
        <item>Zootopia</item>
        <item>Luca</item>
        <item>Soul</item>
        <item>Turning Red</item>
        <item>Raya and the Last Dragon</item>
        <item>Inside Out</item>
    </string-array>
    <string name="players">Players</string>
    <string name="spies">Spies</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="times_up">Time’s Up!</string>
    <string name="spies_guess_word">There are still spies in the game! Spies, reveal yourselves and guess the word. Guess it right — you win. Guess it wrong — the others win.</string>
    <string name="victory">Victory!</string>
    <string name="you_won">All the spies have been eliminated before time ran out. Great teamwork! The regular players win this round.</string>
    <string name="ok">Ok!</string>
</resources>