<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/asking_question"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/times_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spies_guess_word"
        android:textColor="@color/dark_green"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:background="@drawable/button_next"
        android:textColor="?attr/colorOnPrimary"/>
</LinearLayout>