<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/players_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:padding="12dp"
            android:src="@drawable/ic_players"
            app:tint="?android:attr/textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/players"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="45dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/minus_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_minus"
                app:tint="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/players_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"
                android:text="3"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/plus_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_plus"
                app:tint="?android:attr/textColorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spies_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/players_layout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:padding="12dp"
            android:src="@drawable/ic_spy"
            app:tint="?android:attr/textColorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/spies"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="45dp">

            <ImageButton
                android:id="@+id/minus_spies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                android:background="@android:color/transparent"
                app:tint="?android:attr/textColorPrimary"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"/>

            <TextView
                android:id="@+id/spies_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="1"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"/>

            <ImageButton
                android:id="@+id/plus_spies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_plus"
                app:tint="?android:attr/textColorPrimary"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spies_layout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:padding="12dp"
            android:src="@drawable/ic_time"
            app:tint="?android:attr/textColorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/time"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="45dp">

            <ImageButton
                android:id="@+id/minus_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                android:background="@android:color/transparent"
                app:tint="?android:attr/textColorPrimary"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"/>

            <TextView
                android:id="@+id/time_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="2"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"/>

            <ImageButton
                android:id="@+id/plus_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_plus"
                app:tint="?android:attr/textColorPrimary"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginTop="71dp"
        android:background="@drawable/button_next"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>